fix #19 unreadable path details in search

--- a/styles/lists.less
+++ b/styles/lists.less
@@ -28,7 +28,7 @@
       }
 
       &.path-details { // search
-        color: @ui-accent;
+        color: @fg-highlight;
       }
     }
   }
